# FastNapCat

./: .gitignore  README.md  demo.py  pyproject.toml
_deprecated/: __init__.py
_deprecated/di/: __init__.py  compiler.py  signature.py
_deprecated/ext/: __init__.py  outbound.py
_deprecated/runtime/: __init__.py  protocol.py  ws.py
docs/: fastnapcat-di-interface-spec.md  fastnapcat-implementation-plan.md  fastnapcat-rewrite-plan.md
fastnapcat/: __init__.py  app.py
fastnapcat/adapter/: __init__.py  coerce.py  inbound.py  tags.py
fastnapcat/api/: __init__.py  builder.py  requests.py  responses.py
fastnapcat/command/: __init__.py  help.py  models.py  parser.py
fastnapcat/context/: __init__.py  command.py  event.py  message.py
fastnapcat/di/: __init__.py  providers.py
fastnapcat/ext/: __init__.py  api.py  command.py  napcat.py
fastnapcat/facade/: __init__.py  api.py  command.py  napcat.py
fastnapcat/message/: __init__.py  builder.py
fastnapcat/models/: __init__.py  base.py  events.py  outbound.py  segments.py
fastnapcat/runtime/: __init__.py  bridge.py  registry.py  transport.py
tests/: demo_send_message.py  test_command_system_contract.py  test_fastnapcat_basics.py  test_logger_injection_flow.py  test_m1_message_flow.py  test_m2_command_flow.py  test_m3_event_context_flow.py  test_m4_meta_flow.py  test_outbound_observation_flow.py  test_session_extension.py
