[project]
name = "fastnapcat"
version = "0.1.0"
description = "一个基于 FastEvents 的 NapCat / OneBot 事件驱动机器人框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastevents",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.14.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

